# DECENT-GUI

./: .gitignore  .gitmodules  .travis.yml  Brewfile  CMakeLists.txt  CMakeSettings.json  README.md  appveyor.yml  gui_wallet.pro
CMakeModules/: FindPBC.cmake  tmp.FindPBC.cmake
MacOS/: prepare_dist.sh
Windows/: DECENTSetup.sln  DECENTSetup.wixproj  Product.wxs
doc/: doc2.doc  gui_wallet.doc  mac.html
include/: debug_decent_application.h  decent_gui_inguiloopcaller_glb.hpp  decent_tool_fifo.hpp  decent_tool_fifo.tos  ui_wallet_functions.hpp  ui_wallet_functions_base.hpp  unnamedsemaphorelite.hpp
prj/gui_wallet/gui_wallet_qt/: gui_wallet.pro
projects/gui_wallet/gui_wallet_qt/: gui_wallet.pro
projects/gui_wallet/lib_gui_wallet_qt/: lib_gui_wallet.pro
projects/tests/cli_wallet_test_qt/: cli_wallet_test.pro
projects/tests/cli_wallet_test_vs13/: cli_wallet_test.vcxproj
projects/tests/cli_wallet_test_vs15/: cli_wallet_test.vcxproj
projects/tests/json_rpc_test_qt/: json_rpc_test.pro
src/: CMakeLists.txt  browse_content_tab.cpp  browse_content_tab.h  gui_wallet_centralwigdet.cpp  gui_wallet_centralwigdet.h  gui_wallet_global.cpp  gui_wallet_mainwindow.cpp  gui_wallet_mainwindow.h  main_gui_wallet.cpp  mainwindow.cpp  mining_vote_tab.cpp  update_prog_bar.cpp  upload_popup.cpp  upload_tab.cpp
src/dgui/: browse_content_tab.cpp  browse_content_tab.hpp  cliwalletdlg.cpp  cliwalletdlg.hpp  connected_api_instance.hpp  decent_gui_inguiloopcaller.cpp  decent_gui_inguiloopcaller.hpp  fc_rpc_gui.cpp  fc_rpc_gui.hpp  gui_wallet_application.cpp  gui_wallet_application.hpp  gui_wallet_centralwigdet.cpp  gui_wallet_centralwigdet.hpp  gui_wallet_connectdlg.cpp  gui_wallet_connectdlg.hpp  gui_wallet_mainwindow.cpp  gui_wallet_mainwindow.hpp  main_gui_wallet.cpp  qt_commonheader.hpp  transaction_tab.cpp  upload_tab.cpp  upload_tab.hpp  walletcontentdlg.cpp  walletcontentdlg.hpp
src/languages/: decent_en.ts
src/ui_wallet/: ui_wallet_functions.cpp
